--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,8 @@
 title: IFAR BioStats Core
 email: TGT@hsl.harvard.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The IFAR Biostatistics Core is dedicated to provide high quality data
+  management and analysis services in clinical research. 
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://locahost:4000" # the base hostname & protocol for your site
 github_username:  jekyll
