--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,16 @@ title: IFAR BioStats Core
 email: TGT@hsl.harvard.edu
 description: > # this means to ignore newlines until "baseurl:"
   The IFAR Biostatistics Core is dedicated to provide high quality data
-  management and analysis services in clinical research. 
+  management and analysis services in clinical research.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://locahost:4000" # the base hostname & protocol for your site
 github_username:  jekyll
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+redcarpet:
+  extensions: [with_toc_data]
+
+collections:
+  instructions:
+    output: true
