--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ url: "http://locahost:4000" # the base hostname & protocol for your site
 github_username:  jekyll
 
 # Build settings
+# markdown: kramdown
 markdown: redcarpet
 redcarpet:
   extensions: [with_toc_data]
